fix layout issues, add icons

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -35,6 +35,9 @@ section {
 .col {
     flex-direction: column;
 }
+.row {
+    flex-direction: row;
+}
 .j-c-c {
     justify-content: center;
 }
